--- a/views/employeePayroll.ejs
+++ b/views/employeePayroll.ejs
@@ -90,9 +90,9 @@
                   </div>
                 </div>
               </div>
-            <input type="date" name="from" value="<%=query.from%>" id="" class="rounded-1">
-            <input type="date" name="to" value="<%=query.to%>" id="" class="rounded-1"    >
-            
+            <input type="date" name="from" value="<%=query.from%>" id="from" class="rounded-1">
+            <input type="date" name="to" value="<%=query.to%>" id="to" class="rounded-1"    >
+
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
@@ -102,46 +102,25 @@
         <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
             <thead>
                 <tr>
-                    <th rowspan="2">EmployeeID</th>
-                    <th rowspan="2">Employee</th>
-                    <th rowspan="2">Position</th>
-                    <th rowspan="2">PRC</th>
-                    <th rowspan="2">Monthly Rate</th>
-                    <th rowspan="2">no. of days</th>
-                    <th rowspan="2">Gross Amount Earned</th>
-                    <th colspan="3">Tax</th>
-                    <th colspan="3">Contributions</th>
-                    <th rowspan="2">Net Amount Due</th>
-                    <th rowspan="2">Signature of Recipient</th>
-                </tr>
-                <tr>
-                    <th>2%</th>
-                    <th>5%</th>
-                    <th>10%</th>
-                    <th>SSS</th>
-                    <th>PAGIBIG</th>
-                    <th>PHILHEALTH</th>
-                    
+                    <th>Employee ID</th>
+                    <th>Month</th>
+                    <th>Employee</th>
+                    <th>Gross Amount Earned</th>
+                    <th>Net Amount Due</th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody>
                 <% Object.values(data.result).forEach(user =>{%> 
                     <tr>
                         <td><%=user.emp_code%></td>
+                        <td></td>
                         <td><%=user.name%></td>
-                        <td><%=user.designation%></td>
-                        <td></td>
-                        <td><%=user.salary%></td>
-                        <td><%=user.attendance.whalf_days%></td>
                         <td><%=user.salaries.gross_salary%></td>
-                        <td><%=user.deduction.tax_deduction%></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
                         <td><%=user.salaries.net_salary%></td>
-                        <td></td>  
+                        <td>
+                            <a href="/employee/payroll/<%=user.emp_code%>/payslip?from=<%=query.from%>&to=<%=query.to%>">Payslip</a>
+                        </td>
                     </tr>
                     <%}); %>
                     
@@ -158,3 +137,5 @@
 
 <%-include('partials/Footer')%>
 <script type="text/javascript" src="/script/scripts.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+<script type="text/javascript" src="/scripts/dateFilter.js"></script> 
