--- a/views/partials/Aside.ejs
+++ b/views/partials/Aside.ejs
@@ -26,11 +26,18 @@
           Attendance 
         </a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item dropdown position-static">
+        <a class="nav-link dropdown-toggle <%=(url.toLowerCase().includes('/payroll'))?'active':''%>" href="/admin/payroll" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage Payroll</a>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <a class="dropdown-item" href="/admin/payroll">All Payroll</a>
+          <a class="dropdown-item" href="#">Payroll History</a>
+        </div>
+      </li>
+      <!-- <li class="nav-item">
         <a href="/admin/payroll" class="nav-link <%=(url.toLowerCase().includes('/payroll'))?'active':''%>" aria-current="page">
           Payroll
         </a>
-      </li>
+      </li> -->
       <hr>
       <li>
         <a href="/admin/holidays" class="nav-link <%=(url.toLowerCase().includes('/holidays'))?'active':''%>">
